Using operations instead of routing and models for response types
